apps/base/torrent/deployment.yml
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: torrent
spec:
  selector:
    matchLabels:
      app: torrent
  template:
    metadata:
      labels:
        app: torrent
    spec:
      containers:
        # wireguard vpn
        - name: gluetun
          image: qmcgaw/gluetun:v3.37.0 # {"$imagepolicy": "apps:gluetun"}
          volumeMounts:
            - mountPath: /gluetun
              name: gluetun
          securityContext:
            sysctls:
              - name: net.ipv6.conf.all.disable_ipv6
                value: "1"
            capabilities:
              add: [NET_ADMIN]
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 512Mi
              cpu: 300m
        # torrent
        - name: torrent
          image: lscr.io/linuxserver/qbittorrent:4.6.5-r0-ls336 # {"$imagepolicy": "apps:qbittorrent"} 
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 47594
              name: peer
          volumeMounts:
            - mountPath: /config
              name: torrent
            - mountPath: /slow-nfs
              name: slow-nfs
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 1Gi
      volumes:
        - name: gluetun
          persistentVolumeClaim:
            claimName: gluetun
        - name: torrent
          persistentVolumeClaim:
            claimName: torrent
        - name: slow-nfs
          persistentVolumeClaim:
            claimName: slow-nfs
