apps/base/torrent/service.yml
---
# service
apiVersion: v1
kind: Service
metadata:
  name: torrent
spec:
  selector:
    app: torrent
  ports:
    - port: 80
      targetPort: 8080
