apps/base/torrent/http-route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: torrent
spec:
  parentRefs:
    - name: traefik
      namespace: infrastructure 
      sectionName: internal-https
  rules:
    - backendRefs:
        - name: torrent
          port: 80
